<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/user"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_post_new_ad"
            android:icon="@mipmap/post_24"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_my_ads"
            android:icon="@mipmap/myadd_24"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@mipmap/notification_24"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_transaction_history"
            android:icon="@mipmap/transaction_24"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_terms_and_condition"
            android:icon="@mipmap/privacy_24"
            android:title="@string/terms" />

    </group>


    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/logout_24"
            android:title="@string/logout" />
    </group>


</menu>